<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <include
        layout="@layout/activity_toolbar"
        android:id="@+id/toolbar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="HEARTHSEARCH"
        android:textSize="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DECKS"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:paddingBottom="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/hearthstonelogo1"
        android:layout_gravity="center"
        android:padding="20dp"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SEARCH"
        android:layout_gravity="center"
        android:onClick="onSearchClick" />

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FAVORITES"
        android:layout_gravity="center"
        android:onClick="onFavoritesClick"/>

    <Button
        android:id="@+id/decksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DECKS"
        android:layout_gravity="center"
        android:onClick="onDeckClick"/>

</LinearLayout>